# YOLO-UAV

./: .gitignore  README.md  YOLO项目的一般结构.md  pyproject.toml  train.py
VisDrone-Train/YOLO11s/: main.py
VisDrone-Train/YOLO12s/: main.py
VisDrone-YOLO11s-Tune/: main.py
YOLO11s-tune/: main.py
cfg/: VisDrone.yaml
cfg/datasets/: VisDrone.yaml
configs/: config.yaml
configs/data/: UAVDT.yaml  VisDrone.yaml
configs/experiment/: ADown-DWRSeg-FASFFHead.yaml  ADown.yaml  AFPN4Head.yaml  AFPNHead.yaml  ASFFHead.yaml  DWRSeg.yaml  Dysample.yaml  MAB1.yaml  MAB2.yaml  RepVGG.yaml  a-0.yaml  a-10.yaml  a-11.yaml  a-12.yaml  a-13.yaml  a-14.yaml  a-15.yaml  a-16.yaml  a-17.yaml  a-18.yaml  a-19.yaml  a-2.yaml  a-20.yaml  a-21.yaml  a-22.yaml  a-23.yaml  a-24.yaml  a-4.yaml  a-5.yaml  a-6.yaml  a-8.yaml  a-9.yaml  default-UAVDT.yaml  default.yaml  yolo11-DenseMAB-ODConv-ADown.yaml  yolo11-EnhancedMAB-MAB-ADown.yaml  yolo11-MAB1-ODConv-ADown copy.yaml  yolo11-SmallMAB-ODConv-ADown.yaml
configs/hydra/: default.yaml
configs/mode/: default.yaml
configs/model/: README.md  yolo11-ADown-DWRSeg-FASFFHead-0.yaml  yolo11-ADown-DWRSeg-FASFFHead-1.yaml  yolo11-AKConv.yaml  yolo11-C3k2-DWRSeg-1.yaml  yolo11-C3k2-WTConv-1.yaml  yolo11-TripleAtt.yaml  yolo11n-AKConv.yaml  yolo11s.yaml  yolo12s.yaml
configs/paths/: default.yaml  paths_without_output.yaml
src/: evaluate.ipynb  get_COCO_metrice.py  get_all_yaml_param_and_flops.py  heapmap-marimo.py  heapmap-marimo.py.bak  heapmap.ipynb  main_profile.py  train-rt.py  train.py  use_fiftyone.ipynb  val.py
(+93 files in other folders)
