[project]
name = "yolo-uav"
version = "0.1.0"
description = "本项目基于YOLO进行改进，以提高在UAV目标检测上的性能"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "pretty-errors>=1.2.25",
    "rich>=13.9.4",
    "rootutils>=1.0.7",
    "ultralytics[my-extra]",
    "wandb>=0.19.8",
]


[tool.uv.sources]
ultralytics = { path = "../ultralytics", editable = true }
