[project]
name = "yolo-uav"
version = "0.1.0"
description = "本项目基于YOLO进行改进，以提高在UAV目标检测上的性能"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fiftyone>=1.4.0",
    "jupyter>=1.1.1",
    "marimo>=0.11.26",
    "pretty-errors>=1.2.25",
    "rich>=13.9.4",
    "rootutils>=1.0.7",
    # "torchinfo>=1.8.0",
    "ultralytics[my-extra]",
    "wandb>=0.19.8",
    "grad-cam",
    "tidecv",
    "onnx",
    "prettytable"
    # "wat>=0.6.0",
]


[tool.uv.sources]
ultralytics = { path = "../ultralytics", editable = true }

[tool.marimo.runtime]
output_max_bytes = 1_000_000_000
